@@ -1,3 +1,11 @@
+2002-05-15  Paolo Carlini  <pcarlini@unitus.it>
+
+	PR libstdc++/6648
+	* include/bits/istream.tcc (istream::getline, ignore):
+	Upon __idelim (__delim) call sbumpc() not snextc().
+	* testsuite/27_io/narrow_stream_objects.cc:
+	Add test08 and test09.
+
 2002-05-13  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* testsuite/22_locale/ctype_scan_char.cc: Tweak.
